CMakeLists.txt: add specific flags for ifort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,10 @@ if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
   set(CMAKE_Fortran_FLAGS "-ffree-form -ffree-line-length-none -std=f2003 -fopenmp")
   set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -funroll-loops -ffast-math")
   set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -ggdb")
+elseif (Fortran_COMPILER_NAME MATCHES "ifort.*")
+  set(CMAKE_Fortran_FLAGS "-ffree -stand f03 -fpp")
+  set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
+  set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -debug")
 else ()
   message("CMAKE_Fortran_COMPILER full path: " ${CMAKE_Fortran_COMPILER})
   message("Fortran compiler: " ${Fortran_COMPILER_NAME})
