CMakeLists.txt: fix ifort flags, disable line-length warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,9 @@ if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
   set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -funroll-loops -ffast-math")
   set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -ggdb")
 elseif (Fortran_COMPILER_NAME MATCHES "ifort.*")
-  set(CMAKE_Fortran_FLAGS "-ffree -stand f03 -fpp")
-  set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
+  set(CMAKE_Fortran_FLAGS "-free -stand f03 -fpp")
+  # Disable the line-length-extension warning #5268
+  set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -diag-disable=5268")
   set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -debug")
 else ()
   message("CMAKE_Fortran_COMPILER full path: " ${CMAKE_Fortran_COMPILER})
