--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,7 +1,6 @@
 
 CC          = gcc
 CPP         =
-CXX         = g++
 FC          = mpifort
 LD          = mpifort
 AR          = ar -r
@@ -22,7 +21,7 @@ WFLAGS      = -Werror=aliasing -Werror=ampersand -Werror=c-binding-type \
               -Werror=uninitialized -Wno-maybe-uninitialized -Wuse-without-only \
               -Werror
 CFLAGS      = -O2
-FCFLAGS     = -O3 -g -fno-omit-frame-pointer -funroll-loops -ffast-math -fopenmp
+FCFLAGS     = -O3 -g -fno-omit-frame-pointer -funroll-loops  -fopenmp
 CFLAGS     += $(DFLAGS)
 FCDEBFLAGS  = -ffree-form -std=f2003 -fimplicit-none -ffree-line-length-512
 FCFLAGS    += $(DFLAGS) $(FCDEBFLAGS) $(WFLAGS)
@@ -34,7 +33,9 @@ LDFLAGS     = $(FCFLAGS)
 LIBS        = -L${SCALAPACK_PATH}/lib -lscalapack -lreflapack -lrefblas
 
 ifneq ($(CINT),)
-FCDEBFLAGS := $(subst -std=f2003,-std=f2008ts,$(FCDEBFLAGS))
+FCDEBFLAGS  := $(subst -std=f2003,-std=f2008ts,$(FCDEBFLAGS))
+DFLAGS      += -D__C_INTERFACE
+PUBLICFILES += dbcsr.h
 endif
 
 ifneq ($(GPU),)
@@ -49,7 +50,6 @@ endif
 ifneq ($(CRAY),)
 NVCC     = nvcc
 CC       = cc
-CXX      = CC
 FC       = ftn
 LD       = ftn
 DFLAGS  += -D__HAS_smm_dnn
