Introducing dbcsr_performance_driver as an independent test
We can have multiple .perf files for checking, just add them in tests/Makefile.inc

--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -1,8 +1,8 @@
 
 # Add unit tests to be executed by test target in Makefile
-# Syntax: <name of the test>:<eventual input file>
-UNITTESTS  = dbcsr_unittest dbcsr_tensor_unittest dbcsr_test_csr_conversions
-UNITTESTS += dbcsr_performance_driver:test.perf
+UNITTESTS = dbcsr_unittest dbcsr_tensor_unittest dbcsr_test_csr_conversions
+# Input tests for the dbcsr_performance_driver
+PERFTESTS = test.perf
 
 SRC_TESTS += dbcsr_performance_driver.F
 dbcsr_performance_driver: BIN_DEPS = dbcsr_performance_multiply.o
