Kernel parameters handling: add python interface and refactor - move general utlities to "parameters_utils.h" - add python interface to avoid duplication of hashing code - add comments, docstrings - rename python script - remove obsolete options and functions - fix includes, add compilation rules

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -31,6 +31,7 @@ FCFLAGS    += -fcheck=bounds,do,recursion,pointer -Wconversion -fbacktrace
 endif
 LDFLAGS     = $(FCFLAGS)
 LIBS        = -L${SCALAPACK_PATH}/lib -lscalapack -lreflapack -lrefblas
+INC         = -I${PYBIND_PATH}/include
 
 # C interface requires new F2008ts standard
 ifneq ($(CINT),)
