cmake: drop -ffast-math

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,8 @@ endif ()
 get_filename_component(Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
 
 if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
-  set(CMAKE_Fortran_FLAGS "-ffree-form -ffree-line-length-none -std=f2003 -fopenmp")
-  set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -funroll-loops -ffast-math")
+  set(CMAKE_Fortran_FLAGS         "-ffree-form -ffree-line-length-none -std=f2003 -fopenmp")
+  set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -funroll-loops")
   set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -ggdb")
 elseif (Fortran_COMPILER_NAME MATCHES "ifort.*")
   set(CMAKE_Fortran_FLAGS "-free -stand f03 -fpp")
