--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,30 @@ endif ()
 # include our cmake snippets
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-enable_language(Fortran)
-project(dbcsr Fortran)
+project(dbcsr)
+
+include(CMakeDependentOption)
+
+option(USE_MPI "Build with MPI support" ON)
+option(WITH_EXAMPLES "Build the examples" ON)
+cmake_dependent_option(WITH_C_API "Build the C API library" ON "USE_MPI" OFF) # the C API is only available when building with MPI
+
+if (WITH_C_API AND WITH_EXAMPLES)
+  set(ENABLED_LANGUAGES Fortran CXX)
+else ()
+  set(ENABLED_LANGUAGES Fortran)
+endif ()
+
+enable_language(${ENABLED_LANGUAGES})
 enable_testing() # enables the `make test` target
+
+# PACKAGE DISCOVERY:
 
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
 
-option(USE_MPI "Build with MPI support" ON)
 if (USE_MPI)
-  find_package(MPI COMPONENTS Fortran REQUIRED)
+  find_package(MPI COMPONENTS ${ENABLED_LANGUAGES} REQUIRED)
 endif ()
 
 # make sure that the default is a RELEASE
@@ -27,18 +41,26 @@ if (NOT CMAKE_BUILD_TYPE)
     FORCE)
 endif ()
 
-# Compiler detection
+# COMPILER CONFIGURATION:
+
 get_filename_component(Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
 
 if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
+  set(CMAKE_CXX_FLAGS             "-fopenmp")
+  set(CMAKE_CXX_FLAGS_RELEASE     "-O3 -funroll-loops")
+  set(CMAKE_CXX_FLAGS_DEBUG       "-O0 -ggdb")
   set(CMAKE_Fortran_FLAGS         "-ffree-form -ffree-line-length-none -std=f2003 -fopenmp")
   set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -funroll-loops")
   set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -ggdb")
+  set(F2008_COMPILER_FLAGS        "-std=f2008ts")
 elseif (Fortran_COMPILER_NAME MATCHES "ifort.*")
-  set(CMAKE_Fortran_FLAGS "-free -stand f03 -fpp")
+  set(CMAKE_CXX_FLAGS_RELEASE     "-O3")
+  set(CMAKE_CXX_FLAGS_DEBUG       "-O0 -debug")
+  set(CMAKE_Fortran_FLAGS         "-free -stand f03 -fpp")
   # Disable the line-length-extension warning #5268
   set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -diag-disable=5268")
   set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -debug")
+  set(F2008_COMPILER_FLAGS        "-stand f08")
 else ()
   message("CMAKE_Fortran_COMPILER full path: " ${CMAKE_Fortran_COMPILER})
   message("Fortran compiler: " ${Fortran_COMPILER_NAME})
@@ -50,4 +72,7 @@ endif ()
 
 add_subdirectory(src)
 add_subdirectory(tests)
-add_subdirectory(examples)
+
+if (WITH_EXAMPLES)
+  add_subdirectory(examples)
+endif ()
