Makefile fixes - more concise definitions - move sets of flags to Makefile.inc - fix missing dependency (of libcusmm_benchmark.o on parameters.h) - add empty line for esthetics - change SM_NUMBER to ARCH_NUMBER - make python dependency necessary only when compiling with CUDA support

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -31,7 +31,10 @@ FCFLAGS    += -fcheck=bounds,do,recursion,pointer -Wconversion -fbacktrace
 endif
 LDFLAGS     = $(FCFLAGS)
 LIBS        = -L${SCALAPACK_PATH}/lib -lscalapack -lreflapack -lrefblas
-INC         = -I${PYBIND_PATH}/include
+
+EXP = 10
+EXP_DOUBLE = $$(( 2*$(EXP)  ))
+HASH_LIMIT = $$(( 2**$(EXP)-1 ))
 
 # C interface requires new F2008ts standard
 ifneq ($(CINT),)
@@ -42,10 +45,12 @@ ifneq ($(GPU),)
 NVCC        = nvcc
 DFLAGS     += -D__ACC -D__DBCSR_ACC
 FCFLAGS    += -D__ACC -D__DBCSR_ACC
-SM_NUMBER   = 35
+ARCH_NUMBER   = 35
 NVFLAGS     = $(DFLAGS) -O3 -g -arch sm_35 -w
 LIBS        = -L${SCALAPACK_PATH}/lib -lscalapack -L${LAPACK_PATH}/lib -llapack -lblas
 LIBS       += -lstdc++ -lcudart -lcublas -lnvrtc -lcuda
+PYBINDFLAGS = -shared -std=c++11 -fPIC -I $(PYBIND_PATH)/include -I $(PY_PATH)
+HASHDEFS    = -DEXP=$(EXP) -DEXP_DOUBLE=$(EXP_DOUBLE) -DHASH_LIMIT=$(HASH_LIMIT)
 endif
 
 ifneq ($(CRAY),)
@@ -62,11 +67,14 @@ FCFLAGS  = $(WFLAGS) $(DFLAGS) -O3 -fopenmp -funroll-loops \
            -ftree-vectorize \
            $(FCDEBFLAGS)
 LDFLAGS  = $(FCFLAGS)
-SM_NUMBER= 60
+ARCH_NUMBER= 60
 NVFLAGS  = $(DFLAGS) -O3 -w -arch sm_60 --std=c++11
-NVRTCFLAGS = -I $(CUDA_PATH)/include -L $(CUDA_PATH)/lib64 -L $(CUDA_PATH2)/lib64 -lnvrtc -lcuda -Wl,-rpath,$(CUDA_PATH)/lib64
+NVRTCFLAGS = -I $(CUDA_PATH)/include -L $(CUDA_PATH)/lib64 -lnvrtc -lcuda -Wl,-rpath,$(CUDA_PATH)/lib64
+HASHDEFS    = -DEXP=$(EXP) -DEXP_DOUBLE=$(EXP_DOUBLE) -DHASH_LIMIT=$(HASH_LIMIT)
+PYBINDFLAGS = -shared -std=c++11 -fPIC -I $(PYBIND_PATH)/include -I $(PY_PATH)
 LIBS     = -lfftw3 -lfftw3_threads
 LIBS    += /users/alazzaro/project/libsmm/libxsmm/haswell/lib/libsmm_dnn_cray.gnu.a
 LIBS    += -lstdc++ -lcudart -lcublas -lnvrtc -lcuda
 #LIBS    += -lnvToolsExt
+INC         = -I${PYBIND_PATH}/include
 endif
