--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ endif ()
 # make sure that the default is a RELEASE
 if (NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RELEASE CACHE STRING
-    "Choose the type of build, options are: Debug Release."
+    "Choose the type of build, options are: Debug Release Coverage."
     FORCE)
 endif ()
 
@@ -46,27 +46,29 @@ endif ()
 get_filename_component(Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
 
 if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
-  set(CMAKE_CXX_FLAGS             "-fopenmp")
-  set(CMAKE_CXX_FLAGS_RELEASE     "-O3 -funroll-loops")
-  set(CMAKE_CXX_FLAGS_DEBUG       "-O0 -ggdb")
-  set(CMAKE_Fortran_FLAGS         "-ffree-form -ffree-line-length-none -std=f2003 -fopenmp")
-  set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -funroll-loops")
-  set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -ggdb")
-  set(F2008_COMPILER_FLAGS        "-std=f2008ts")
+  set(CMAKE_CXX_FLAGS              "-fopenmp")
+  set(CMAKE_CXX_FLAGS_RELEASE      "-O3 -funroll-loops")
+  set(CMAKE_CXX_FLAGS_COVERAGE     "-O0 -fprofile-arcs -ftest-coverage")
+  set(CMAKE_CXX_FLAGS_DEBUG        "-O0 -ggdb")
+  set(CMAKE_Fortran_FLAGS          "-ffree-form -ffree-line-length-none -std=f2003 -fopenmp")
+  set(CMAKE_Fortran_FLAGS_RELEASE  "-O3 -funroll-loops")
+  set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -ggdb")
+  set(CMAKE_Fortran_FLAGS_COVERAGE "-O0 -fprofile-arcs -ftest-coverage")
+  set(F2008_COMPILER_FLAGS         "-std=f2008ts")
 elseif (Fortran_COMPILER_NAME MATCHES "ifort.*")
-  set(CMAKE_CXX_FLAGS_RELEASE     "-O3")
-  set(CMAKE_CXX_FLAGS_DEBUG       "-O0 -debug")
-  set(CMAKE_Fortran_FLAGS         "-free -stand f03 -fpp")
+  set(CMAKE_CXX_FLAGS_RELEASE      "-O3")
+  set(CMAKE_CXX_FLAGS_DEBUG        "-O0 -debug")
+  set(CMAKE_Fortran_FLAGS          "-free -stand f03 -fpp")
   # Disable the line-length-extension warning #5268
-  set(CMAKE_Fortran_FLAGS_RELEASE "-O3 -diag-disable=5268")
-  set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -debug")
-  set(F2008_COMPILER_FLAGS        "-stand f08")
+  set(CMAKE_Fortran_FLAGS_RELEASE  "-O3 -diag-disable=5268")
+  set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -debug")
+  set(F2008_COMPILER_FLAGS         "-stand f08")
 else ()
   message("CMAKE_Fortran_COMPILER full path: " ${CMAKE_Fortran_COMPILER})
   message("Fortran compiler: " ${Fortran_COMPILER_NAME})
   message("No optimized Fortran compiler flags are known, we just try -O2...")
-  set(CMAKE_Fortran_FLAGS_RELEASE "-O2")
-  set(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -g")
+  set(CMAKE_Fortran_FLAGS_RELEASE  "-O2")
+  set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -g")
 endif ()
 
 
